--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -47,7 +47,7 @@ main.dark{
 
     --danger:#2e0b26;
     --main-color: #414758;
-    --main-text: #150b0b;
+    --main-text: #f3f3f3;
     --business:#f07ed0;
     --business-glow:#a14687;
     --personal:#93e5aa;
